--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html class="no-js">
+
+<head>
     <meta charset="UTF-8">
     <title>HMCA Home</title>
-  </head>
-  <body>
+
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+</head>
+
+<body>
     <div id="root">
     </div>
-  </body>
+</body>
+
 </html>
